[package]
name = "zinc-rust-sdk"
version = "1.106.0"
edition = "2021"
rust-version = "1.84.1"
publish = true
license-file = "LICENSE"
description = "Rust SDK for the Zinc protocol"
readme = "README.md"
repository = "https://github.com/sphalerite-foundry/zinc-rust-sdk"

[lib]
name = "zinc_rust_sdk"

[features]
default = []
anchor = []
anchor-idl-build = ["anchor", "anchor-lang/idl-build"]
fetch = ["dep:solana-account", "dep:solana-rpc-client"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anyhow = { version = "1.0.102" }
arcium-client = { version = "0.9.7", default-features = false }
borsh = { version = "1.6.0", features = ["derive"] }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2.19" }
solana-account = { version = "3.2.0", optional = true }
solana-account-decoder-client-types = { version = "2.3.13" }
solana-account-info = { version = "3.1.1" }
solana-address = { version = "2.6.0", features = [
  "borsh",
  "copy",
  "curve25519",
  "decode",
] }
solana-address-lookup-table-interface = { version = "2.2.2" }
solana-client = { version = "2.3.13" }
solana-commitment-config = { version = "2.2.1" }
solana-compute-budget-interface = { version = "2.2.2" }
solana-cpi = { version = "3.1.0" }
solana-instruction = { version = "3.4.0" }
solana-message = { version = "2.4.0" }
solana-program-error = { version = "3.0.0" }
solana-pubkey = { version = "4.2.0", features = ["borsh"] }
solana-rpc-client = { version = "3.1.12", optional = true }
solana-sdk = { version = "2.3.1" }
solana-system-interface = { version = "3.1.0" }
spl-token = { version = "8.0.0" }
thiserror = { version = "2.0.18" }
tokio = { version = "1.50.0", features = ["time"] }
